add iorad player page

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -2,7 +2,7 @@
   "orgName": "Iorad Company",
   "edition": "Developer",
   "adminEmail": "info@iorad.com",
-  "hasSampleData": false,
+  "hasSampleData": true,
   "features": [
     "Knowledge",
     "API"
