--- a/.forceignore
+++ b/.forceignore
@@ -10,3 +10,11 @@ package.xml
 
 # LWC Jest
 **/__tests__/**
+
+AppSwitcher.appMenu
+package.xml
+**appMenu
+**appSwitcher
+**objectTranslations
+**profiles
+**settings
