change to enterprise

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,6 +1,6 @@
 {
   "orgName": "Iorad Company",
-  "edition": "Developer",
+  "edition": "Enterprise",
   "adminEmail": "info@iorad.com",
   "hasSampleData": true,
   "features": [
